# musictool-vnext

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: copilot-instructions.md
.github/plans/: 01-project-setup.md  02-database-schema.md  03-traktor-nml-parser.md  04-discogs-api-integration.md  05-fuzzy-matching-engine.md  06-streamlit-table-ui.md  07-discogs-links-actions.md  08-collection-statistics.md  09-data-import-sync.md  10-testing-performance-polish.md  README.md
data/: repomix-output-roel4ez-musictool.xml  repomix-output-roel4ez-musictool.xml:Zone.Identifier  repomix-output-roel4ez-musictool.xml:sec.endpointdlp
docs/: mvp-project-description.md
docs/adr/: ADR-001-database-design.md  ADR-002-database-implementation.md
src/musictool/: __init__.py
src/musictool/models/: __init__.py  config.py  database.py  repositories.py
src/musictool/services/: __init__.py
src/musictool/ui/: __init__.py
tests/: __init__.py  test_database_config.py  test_database_models.py  test_repositories.py  test_smoke.py
