[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musictool"
version = "0.1.0"
description = "A simple music collection manager showing digital and physical formats"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "MusicTool Developer"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.39.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "rapidfuzz>=3.0.0",  # For fuzzy matching
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",  # Modern linter/formatter, faster than flake8
    "pyright>=1.1.0",
]

[project.scripts]
musictool = "musictool.cli:main"

[project.urls]
"Homepage" = "https://github.com/roel4ez/musictool-vnext"
"Bug Tracker" = "https://github.com/roel4ez/musictool-vnext/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
include = ["src", "app.py"]
exclude = ["**/__pycache__", ".venv"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportDuplicateImport = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]
